# tg_salary

./: .dockerignore  .environment  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
handlers/: handlers.py  help_utils.py  utils.py
keyboards/: kb_main.py  kb_salary.py  keyboards.py
